# CarpioPlus

./: .buildinfo  .gitignore  1-1-1-point_position_to_segment.html  1-1-2-segments_intersection.html  1-1-3-segment_vs_box.html  1-1-5-point_in_polygon.html  1-1-9-bezier_curve.html  2-1-2-array_openmp.html  2-3-1-jacobi_solver.html  3-1-1-field_define.html  3-1-2-vector_center_and_face_define.html  4-1-1-one_step_1d.html  4-1-2-gate_1d.html  4-1-3-one_step_2d.html  4-1-4-gate_2d.html  4-1-5-sine-square.html  4-1-5-sine_square.html  4-1-6-semi_ellipse.html  4-1-7-rotational_one_gate.html  4-1-8-rotational_two_gates.html  4-1-9-rotational_square.html  4-2-1-time_scheme_1d-1.py  4-2-1-time_scheme_1d.html  4-2-2-flower_shape.html  5-1-1-doc_test.html  CMakeLists.txt  algebra.html  convection.html  example.html  examples.html  genindex.html  geometry.html  index.html  objects.inv  poisson.html  search.html  searchindex.js  structure.html
_sources/: 1-1-1-point_position_to_segment.rst.txt  1-1-2-segments_intersection.rst.txt  1-1-3-segment_vs_box.rst.txt  1-1-5-point_in_polygon.rst.txt  1-1-9-bezier_curve.rst.txt  2-1-2-array_openmp.rst.txt  2-3-1-jacobi_solver.rst.txt  3-1-1-field_define.rst.txt  3-1-2-vector_center_and_face_define.rst.txt  4-1-1-one_step_1d.rst.txt  4-1-2-gate_1d.rst.txt  4-1-3-one_step_2d.rst.txt  4-1-4-gate_2d.rst.txt  4-1-5-sine-square.rst.txt  4-1-5-sine_square.rst.txt  4-1-6-semi_ellipse.rst.txt  4-1-7-rotational_one_gate.rst.txt  4-1-8-rotational_two_gates.rst.txt  4-1-9-rotational_square.rst.txt  4-2-1-time_scheme_1d.rst.txt  4-2-2-flower_shape.rst.txt  5-1-1-doc_test.rst.txt  algebra.rst.txt  convection.rst.txt  examples.rst.txt  geometry.rst.txt  index.rst.txt  structure.rst.txt
_sources/theory/: convection.rst.txt  eno.rst.txt  non-incremental.rst.txt  projection_method.rst.txt  theory.rst.txt  tvd.rst.txt
_static/: alabaster.css
cases/: README.md
cases/1-1-1-point_location/: main.cpp  report.py  report.rstt  run.py
cases/1-1-1-point_position_to_segment/: report.rstt  run.py
cases/1-1-1-segments_intersection/: run.py
cases/1-1-2-segments_intersection/: main.cpp  report.py  report.rstt  run.py
cases/1-1-5-point_in_polygon/: report.rstt  run.py
cases/2-1-2-array_openmp/: main.cpp  report.rstt  run.py
cases/3-1-1-field_define/: main.cpp  report.rstt
cases/3-1-1-one_step_1d/: main.cpp  plot.py  report.tex  run.py
cases/3-1-2-vector_center_and_face_define/: main.cpp  report.rstt
cases/4-1-1-one_step_1d/: CMakeLists.txt  main.cpp  report.rstt  run.py
cases/4-1-2-gate_1d/: plot.py  report.rstt  run.py
cases/4-1-3-one_step_2d/: plot.py
cases/4-3-1-lid_driven_cavity/: main.cpp  plot.py
cases/4-4-1-reconstruct_eclipse/: main.cpp  run.py
cases/pytools/: filetool.py  reporttool.py  runtool.py
doc/source/: algebra.rst  conf.py  convection.rst  equation.rst  example.rst  examples.rst  index.rst  poisson.rst
examples/: README.md
examples/1-1-1-point_position_to_segment/: CMakeLists.txt
examples/1-1-2-segments_intersection/: main.cpp
examples/1-1-3-segment_vs_box/: main.cpp  plot.py  report.rst  run.py
examples/1-1-5-point_in_polygon/: main.cpp
examples/1-1-9-bezier_curve/: CMakeLists.txt  main.cpp  report.rst  run.py
examples/2-1-2-array_openmp/: CMakeLists.txt  main.cpp  report.rst  run.py
examples/2-3-1-jacobi_solver/: main.cpp  run.py
examples/3-1-1-field_define/: main.cpp  run.py
examples/3-1-2-vector_center_and_face_define/: main.cpp  report.rst  run.py
examples/4-1-1-one_step_1d/: main.cpp  plot.py  report.rst  (+2 more)
include/: type_define.hpp
py_matplot/: convection_1d.py
test/: CMakeLists.txt  test.cpp  test.hpp
test/algebra/: CMakeLists.txt  test_linear_polynomial.hpp  test_matrix_sparse.cpp  test_matrix_sparse.hpp  test_multi_array.hpp  test_solver_jacobi.hpp
test/equation/: CMakeLists.txt  test_base_equation.cpp  test_convection.hpp  test_equation.hpp  test_poisson.hpp
test/geometry/: CMakeLists.txt  test_aabbtree.hpp  test_bezier.cpp  test_bezier.hpp  test_box.hpp  test_point.cpp  test_point.hpp  test_point_chain.cpp  test_point_chain.hpp  test_polygon_boolean.hpp  test_segment.hpp  test_ts.hpp  test_voftool.hpp
test/mpi/: test_mpi_learn.hpp
test/octree/: test_node.hpp
test/structure/: CMakeLists.txt  test_field.cpp  test_field.hpp  test_ghost.hpp  test_grid.hpp  test_interpolation.hpp  test_operation.hpp  test_order.hpp  test_scalar.hpp  test_sexpression.hpp  test_value_cut.hpp  test_vof.hpp
test/substance/: test_atmosphere.cpp  test_atmosphere.hpp
test/utility/: test_any.hpp  test_clock.hpp
theory/: convection.html  eno.html  non-incremental.html  projection_method.html  theory.html  tvd.html
(+226 files in other folders)
